# stm32g0-ll-drivers

./: Cargo.toml  memory.x
.cargo/: config.toml
examples/: adc.rs  blinky.rs
src/: adc.rs  gpio.rs  lib.rs  rcc.rs
